--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,6 @@
         <module>core</module>
         <module>cloudwatch</module>
         <module>archetype</module>
-        <module>integration-setup</module>
-        <module>integration-verify</module>
     </modules>
 
     <licenses>
@@ -365,8 +363,8 @@
                         <redirectTestOutputToFile>true</redirectTestOutputToFile>
                         <runOrder>${maven.test.runOrder}</runOrder>
                         <includes>
-                            <include>**/IntTest*.class</include>
-                            <include>**/IntSpec*.class</include>
+                            <include>**/IntTest*</include>
+                            <include>**/IntSpec*</include>
                         </includes>
                     </configuration>
                 </plugin>
@@ -378,8 +376,8 @@
                         <redirectTestOutputToFile>true</redirectTestOutputToFile>
                         <runOrder>${maven.test.runOrder}</runOrder>
                         <includes>
-                            <include>**/*Test.class</include>
-                            <include>**/*Spec.class</include>
+                            <include>**/*Test</include>
+                            <include>**/*Spec</include>
                         </includes>
                     </configuration>
                 </plugin>
