--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,7 @@ machine:
 
 dependencies:
     override:
-        - mvn --projects archetype,core dependency:go-offline
+        - mvn --projects archetype,config,core dependency:go-offline
 
 test:
     override:
