--- a/pom.xml
+++ b/pom.xml
@@ -551,7 +551,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>${version.javadoc.plugin}</version>
+                    <version>${version.maven-javadoc-plugin}</version>
                     <executions>
                         <execution>
                             <id>attach-javadocs</id>
