--- a/cloudwatch/pom.xml
+++ b/cloudwatch/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>com.deciphernow</groupId>
         <artifactId>gm-fabric</artifactId>
-        <version>0.2.3</version>
+        <version>0.2.4-SNAPSHOT</version>
     </parent>
 
     <groupId>com.deciphernow</groupId>
