--- a/circle.yml
+++ b/circle.yml
@@ -1,15 +1,17 @@
 machine:
     java:
         version: oraclejdk8
+    services:
+        - docker
 
 dependencies:
     override:
-        - mvn install -DskipTests -DskipITs
+        - mvn install -DskipTests -DskipITs -Ddocker.skip
 
 test:
     override:
-        - mvn verify
+        - mvn verify -P circle
 
 deployment:
     override:
-        - if [ -z "${CI_PULL_REQUEST}" ]; then mvn deploy -P deploy -s settings.xml; fi
+        - if [ -z "${CI_PULL_REQUEST}" ]; then mvn deploy -P deploy -P circle -s settings.xml; fi
