Issue #128: rev 0.2.4 => 0.2.5-SNAPSHOT.

--- a/archetype/src/test/resources/projects/basic/archetype.properties
+++ b/archetype/src/test/resources/projects/basic/archetype.properties
@@ -20,5 +20,5 @@ version=0.1.0-SNAPSHOT
 groupId=com.deciphernow
 artifactId=gm-fabric-archetype
 appName=TestApp
-serviceFrameworkVersion=0.2.4
-version.service.framework=0.2.4
+serviceFrameworkVersion=0.2.5-SNAPSHOT
+version.service.framework=0.2.5-SNAPSHOT
