--- a/archetype/src/main/resources/archetype-resources/server/src/main/package/etc/parameters.config
+++ b/archetype/src/main/resources/archetype-resources/server/src/main/package/etc/parameters.config
@@ -1,22 +1,22 @@
 #encoding=UTF-8
 
-# https://github.com/DecipherNow/gm-fabric-jvm/blob/gm-fabric-jvm-0.2.3/documentation/Config.md
+# https://github.com/DecipherNow/gm-fabric-jvm/blob/gm-fabric-jvm-0.2.5/documentation/Config.md
 #
 # Explains how to add your own attributes to your service.
 
 #
-# https://github.com/DecipherNow/gm-fabric-jvm/blob/gm-fabric-jvm-0.2.3/documentation/ConfigureIPAddressResolution.md
+# https://github.com/DecipherNow/gm-fabric-jvm/blob/gm-fabric-jvm-0.2.5/documentation/ConfigureIPAddressResolution.md
 #
 #-com.deciphernow.server.config.ipAddress.enableIpAddressResolution=
 #-com.deciphernow.server.config.ipAddress.useNetworkInterfaceName=
 
 #
-#https://github.com/DecipherNow/gm-fabric-jvm/blob/gm-fabric-jvm-0.2.3/documentation/ResourceDecrypter.md
+#https://github.com/DecipherNow/gm-fabric-jvm/blob/gm-fabric-jvm-0.2.5/documentation/ResourceDecrypter.md
 #
 #-com.deciphernow.server.config.resources.decryptClass=
 
 #
-#https://github.com/DecipherNow/gm-fabric-jvm/blob/gm-fabric-jvm-0.2.3/documentation/Parameters.md
+#https://github.com/DecipherNow/gm-fabric-jvm/blob/gm-fabric-jvm-0.2.5/documentation/Parameters.md
 #
 #-acl.whitelist.file=etc/whitelist.txt
 #-com.deciphernow.server.config.client.numWorkers=16
@@ -29,9 +29,17 @@
 #-com.deciphernow.server.config.zk.announcementPoint=/example/service/mysfirstservice/0.1
 #-com.deciphernow.server.config.zk.zookeeperConnection=localhost:2181
 #-com.deciphernow.server.config.staticRoutes.ignore=/ping
+#-com.deciphernow.server.config.rest.maxRequestSize=25
+#-com.deciphernow.server.config.rest.httpServerName=http
+#-com.deciphernow.server.config.rest.httpsServerName=https
+#-com.deciphernow.server.config.admin.disableAdminHttpServer=false
+#-com.deciphernow.server.config.flags.allowUndefinedFlags=false
+#-com.deciphernow.server.config.flags.failFastOnFlagsNotParsed=false
+#-com.deciphernow.server.config.filter.blockHttp=false
+
 
 #
-#https://github.com/DecipherNow/gm-fabric-jvm/blob/gm-fabric-jvm-0.2.3/documentation/AnnounceAndBind.md
+#https://github.com/DecipherNow/gm-fabric-jvm/blob/gm-fabric-jvm-0.2.5/documentation/AnnounceAndBind.md
 #
 #-com.deciphernow.server.config.admin.port=
 #-com.deciphernow.server.config.rest.httpPort=
