--- a/circle.yml
+++ b/circle.yml
@@ -14,4 +14,4 @@ test:
 
 deployment:
     override:
-        - if [ -z "${CI_PULL_REQUEST}" ]; then mvn deploy -P deploy -P circle -s settings.xml; fi
+        - if [ -z "${CI_PULL_REQUEST}" ]; then PGP_RINGS="$(echo ${PGP_RINGS_ENCODED} | base64 --decode)" mvn deploy -P deploy -s settings.xml; fi
