--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,18 +5,21 @@ jobs:
       - image: circleci/openjdk:8
     steps:
       - checkout
+      - setup_remote_docker
       - run: mvn install -DskipTests -DskipITs -Ddocker.skip
   test:
     docker:
       - image: circleci/openjdk:8
     steps:
       - checkout
+      - setup_remote_docker
       - run: mvn verify -P circle
   deploy:
     docker:
       - image: circleci/openjdk:8
     steps:
       - checkout
+      - setup_remote_docker
       - run: if [ -z "${CI_PULL_REQUEST}" ]; then PGP_RINGS="$(echo ${PGP_RINGS_ENCODED} | base64 --decode)" mvn deploy -P deploy -s settings.xml; fi
 workflows:
   version: 2
