--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,11 @@ jobs:
       - run: if [ -z "${CI_PULL_REQUEST}" ]; then PGP_RINGS="$(echo ${PGP_RINGS_ENCODED} | base64 --decode)" mvn deploy -P deploy -s settings.xml; fi
 workflows:
   version: 2
-  build_and_test:
+  test-and-deploy:
     jobs:
       - build
       - test
-      - deploy
+      - deploy:
+          filters:
+            branches:
+              only: master
