--- a/archetype/pom.xml
+++ b/archetype/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>com.deciphernow</groupId>
     <artifactId>gm-fabric</artifactId>
-    <version>0.2.6-SNAPSHOT</version>
+    <version>0.2.6</version>
   </parent>
 
   <groupId>com.deciphernow</groupId>
