--- a/archetype/src/test/resources/projects/basic/archetype.properties
+++ b/archetype/src/test/resources/projects/basic/archetype.properties
@@ -20,5 +20,5 @@ version=0.1.0-SNAPSHOT
 groupId=com.deciphernow
 artifactId=gm-fabric-archetype
 appName=TestApp
-serviceFrameworkVersion=0.2.6-SNAPSHOT
-version.service.framework=0.2.6-SNAPSHOT
+serviceFrameworkVersion=0.2.6
+version.service.framework=0.2.6
