--- a/config/pom.xml
+++ b/config/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>gm-fabric</artifactId>
         <groupId>com.deciphernow</groupId>
-        <version>0.2.6-SNAPSHOT</version>
+        <version>0.2.6</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
